kubernetes/taller-kubernetes-main/app-publicaciones/2database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
  namespace: publicaciones
spec:
  selector:
    matchLabels:
      app: postgres-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-auth-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-publicaciones
  namespace: publicaciones
spec:
  selector:
    matchLabels:
      app: postgres-publicaciones
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-publicaciones
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-publicaciones-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-catalogo
  namespace: publicaciones
spec:
  selector:
    matchLabels:
      app: postgres-catalogo
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-catalogo
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-catalogo-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-notificaciones
  namespace: publicaciones
spec:
  selector:
    matchLabels:
      app: postgres-notificaciones
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-notificaciones
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-notificaciones-pvc
