kubernetes/taller-kubernetes-main/app-publicaciones/6ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: publicaciones-ingress
  namespace: publicaciones
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-publicaciones.local
      http:
        paths:
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
